--- a/blog-repo/blog/templates/post/post_detail.html
+++ b/blog-repo/blog/templates/post/post_detail.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi blog</title>
+    <title>post / Mi blog</title>
 </head>
 <body>
-    <h1>aqui comienza</h1>
+    <h1>post Detail</h1>
 </body>
 </html>
