--- a/blog-repo/blog/templates/users/user_profile.html
+++ b/blog-repo/blog/templates/users/user_profile.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>user / Mi blog</title>
+    <title>user-Mi blog</title>
 </head>
 <body>
-    <h1>perfil de usuario</h1>
+    <h1>Perfil de usuario</h1>
 </body>
 </html>
