--- a/blog-repo/blog/templates/index.html
+++ b/blog-repo/blog/templates/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% comment %}
+
+    } <!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,4 +10,10 @@
 <body>
     <h1>aqui comienza</h1>
 </body>
-</html>
+</html>{% endcomment %}
+
+{% extends 'layouts/general_layout' %}
+
+{% block title %}Blog Infor{% endblock title %}
+
+{% block content %}Mi blog{% endblock content %}
